--- a/animation_navigation/style.css
+++ b/animation_navigation/style.css
@@ -27,7 +27,7 @@ nav.nav {
   height: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: width 0.6s linear;
